--- a/src/custom.css
+++ b/src/custom.css
@@ -16,3 +16,9 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+.header{
+  color: #f8f8f7;
+  padding-top: 10px;
+  padding-bottom: 40px;
+}
